Чучуть испарвил ощибку обновления при логине

--- a/task-module/public/index.html
+++ b/task-module/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="%PUBLIC_URL%/STMicon.png" sizes="192x192" />
-<link rel="apple-touch-icon" href="%PUBLIC_URL%/STMicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/STMicon1.png" sizes="192x192" />
+<link rel="apple-touch-icon" href="%PUBLIC_URL%/STMicon1.png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
